Fix CSS bug where messages would end up covered by message bar at bottom of screen.

--- a/css/common.css
+++ b/css/common.css
@@ -5,4 +5,5 @@
 body {
     background: #999;
     padding-top: 56px;
+    padding-bottom: 175px;
 }
